[gd_scene load_steps=7 format=3 uid="uid://6rh0jqqr52hh"]

[ext_resource type="Script" uid="uid://dpj7hjp15fjjf" path="res://opciones.gd" id="1_0bc36"]
[ext_resource type="Texture2D" uid="uid://8brnhsyk0n81" path="res://assets/imagenes/fondo.png" id="2_wvblx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8itn"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bc36"]
bg_color = Color(0.105882354, 0.14117648, 0.21176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvblx"]
bg_color = Color(0.078431375, 0.105882354, 0.16470589, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bdti"]
bg_color = Color(0.14117648, 0.19215687, 0.2901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.91764706, 0.9490196, 0.98039216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bc36")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wvblx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j8itn")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="OpcionesLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sonido"

[node name="VolumenLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volumen"

[node name="VolumenSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 24)
layout_mode = 2

[node name="VolverButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0bc36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wvblx")
theme_override_styles/hover = SubResource("StyleBoxFlat_7bdti")
text = "Volver"
